// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createAppleTheme test 1`] = `
Object {
  "colors": Object {
    "accentButtonBackground": "#0078D4",
    "accentButtonText": "white",
    "actionLink": "#0078D4",
    "actionLinkHovered": "#0078D4",
    "background": "white",
    "blockingBackground": "#DD4242",
    "bodyDivider": "#C8C8C8",
    "bodyFrameBackground": "white",
    "bodyFrameDivider": "#E1E1E1",
    "bodyStandoutBackground": "#F8F8F8",
    "bodyText": "#212121",
    "bodyTextChecked": "#212121",
    "brandedBackground": "#0078D4",
    "brandedBorder": "transparent",
    "brandedCheckedBackground": "#0078D4",
    "brandedCheckedContent": "white",
    "brandedCheckedHoveredBackground": "white",
    "brandedCheckedHoveredContent": "white",
    "brandedContent": "white",
    "brandedDisabledBackground": "#E1E1E1",
    "brandedDisabledBorder": "transparent",
    "brandedDisabledContent": "white",
    "brandedDisabledIcon": "white",
    "brandedFocusedBackground": "#0078D4",
    "brandedFocusedBorder": "transparent",
    "brandedFocusedContent": "white",
    "brandedFocusedIcon": "white",
    "brandedFocusedSecondaryContent": "white",
    "brandedHoveredBackground": "#0078D4",
    "brandedHoveredBorder": "transparent",
    "brandedHoveredContent": "white",
    "brandedHoveredIcon": "white",
    "brandedHoveredSecondaryContent": "white",
    "brandedIcon": "white",
    "brandedPressedBackground": "#2B88D8",
    "brandedPressedBorder": "transparent",
    "brandedPressedContent": "white",
    "brandedPressedIcon": "white",
    "brandedPressedSecondaryContent": "white",
    "brandedSecondaryContent": "white",
    "buttonBackground": "transparent",
    "buttonBackgroundChecked": "transparent",
    "buttonBackgroundCheckedHovered": "transparent",
    "buttonBackgroundDisabled": "transparent",
    "buttonBackgroundHovered": "transparent",
    "buttonBackgroundPressed": "transparent",
    "buttonBorder": "#2B88D8",
    "buttonBorderDisabled": "#E1E1E1",
    "buttonBorderFocused": "#2B88D8",
    "buttonText": "#0078D4",
    "buttonTextChecked": "#0078D4",
    "buttonTextCheckedHovered": "#0078D4",
    "buttonTextDisabled": "#ACACAC",
    "buttonTextHovered": "#0078D4",
    "buttonTextPressed": "#C7E0F4",
    "checkboxBackground": "#0078D4",
    "checkboxBackgroundDisabled": "white",
    "checkboxBorderColor": "#404040",
    "checkmarkColor": "white",
    "defaultBackground": "transparent",
    "defaultBorder": "#2B88D8",
    "defaultCheckedBackground": "transparent",
    "defaultCheckedContent": "#0078D4",
    "defaultCheckedHoveredBackground": "transparent",
    "defaultCheckedHoveredContent": "#0078D4",
    "defaultContent": "#0078D4",
    "defaultDisabledBackground": "transparent",
    "defaultDisabledBorder": "#E1E1E1",
    "defaultDisabledContent": "#ACACAC",
    "defaultDisabledIcon": "#ACACAC",
    "defaultDisabledSecondaryContent": "#ACACAC",
    "defaultFocusedBackground": "transparent",
    "defaultFocusedBorder": "#2B88D8",
    "defaultFocusedContent": "#0078D4",
    "defaultFocusedIcon": "#0078D4",
    "defaultHoveredBackground": "transparent",
    "defaultHoveredBorder": "#2B88D8",
    "defaultHoveredContent": "#0078D4",
    "defaultHoveredIcon": "#0078D4",
    "defaultHoveredSecondaryContent": "#0078D4",
    "defaultIcon": "#0078D4",
    "defaultPressedBackground": "transparent",
    "defaultPressedBorder": "#DEECF9",
    "defaultPressedContent": "#C7E0F4",
    "defaultPressedIcon": "#C7E0F4",
    "defaultPressedSecondaryContent": "#C7E0F4",
    "defaultStateBackground": "white",
    "disabledBackground": "#E1E1E1",
    "disabledBodySubtext": "#ACACAC",
    "disabledBodyText": "#ACACAC",
    "disabledSubtext": "#ACACAC",
    "disabledText": "#ACACAC",
    "errorBackground": "#DD4242",
    "errorText": "#D92C2C",
    "focusBorder": "transparent",
    "ghostBackground": "transparent",
    "ghostBorder": "transparent",
    "ghostCheckedBackground": "transparent",
    "ghostCheckedContent": "#0078D4",
    "ghostCheckedHoveredBackground": "transparent",
    "ghostCheckedHoveredBorder": "transparent",
    "ghostCheckedHoveredContent": "#0078D4",
    "ghostContent": "#0078D4",
    "ghostDisabledBackground": "transparent",
    "ghostDisabledBorder": "transparent",
    "ghostDisabledContent": "#ACACAC",
    "ghostDisabledIcon": "#ACACAC",
    "ghostFocusedBackground": "transparent",
    "ghostFocusedBorder": "transparent",
    "ghostFocusedContent": "#0078D4",
    "ghostFocusedIcon": "#0078D4",
    "ghostFocusedSecondaryContent": "#0078D4",
    "ghostHoveredBackground": "transparent",
    "ghostHoveredBorder": "transparent",
    "ghostHoveredContent": "#0078D4",
    "ghostHoveredIcon": "#0078D4",
    "ghostHoveredSecondaryContent": "#0078D4",
    "ghostIcon": "#0078D4",
    "ghostPressedBackground": "transparent",
    "ghostPressedBorder": "transparent",
    "ghostPressedContent": "#C7E0F4",
    "ghostPressedIcon": "#C7E0F4",
    "ghostPressedSecondaryContent": "#C7E0F4",
    "ghostSecondaryContent": "#0078D4",
    "inputBackground": "white",
    "inputBackgroundChecked": "white",
    "inputBackgroundCheckedHovered": "white",
    "inputBorder": "#E1E1E1",
    "inputBorderHovered": "#E1E1E1",
    "inputFocusBorderAlt": "#C8C8C8",
    "inputForegroundChecked": "#0078D4",
    "inputPlaceholderText": "#6E6E6E",
    "inputText": "#212121",
    "inputTextHovered": "#212121",
    "link": "#0078D4",
    "linkHovered": "#0078D4",
    "linkPressed": "#2B88D8",
    "listBackground": "white",
    "listHeaderBackgroundHovered": "#212121",
    "listHeaderBackgroundPressed": "#212121",
    "listItemBackgroundChecked": "white",
    "listItemBackgroundCheckedHovered": "white",
    "listItemBackgroundHovered": "white",
    "listText": "#212121",
    "menuBackground": "white",
    "menuDivider": "#E1E1E1",
    "menuHeader": "#212121",
    "menuIcon": "#6E6E6E",
    "menuItemBackgroundHovered": "white",
    "menuItemBackgroundPressed": "white",
    "menuItemText": "#212121",
    "menuItemTextHovered": "#212121",
    "personaActivityGlow": "transparent",
    "personaActivityRing": "white",
    "primaryButtonBackground": "#0078D4",
    "primaryButtonBackgroundDisabled": "#E1E1E1",
    "primaryButtonBackgroundHovered": "#0078D4",
    "primaryButtonBackgroundPressed": "#2B88D8",
    "primaryButtonBorder": "transparent",
    "primaryButtonBorderFocused": "transparent",
    "primaryButtonText": "white",
    "primaryButtonTextDisabled": "white",
    "primaryButtonTextHovered": "white",
    "primaryButtonTextPressed": "white",
    "smallInputBorder": "#C8C8C8",
    "subText": "#6E6E6E",
    "successBackground": "#27AC22",
    "variantBorder": "#E1E1E1",
    "variantBorderHovered": "#E1E1E1",
    "warningBackground": "#FFD335",
    "warningHighlight": "#FFD94E",
    "warningText": "#FFD335",
  },
  "components": Object {
    "Button": Object {
      "content": Object {
        "fontSize": 12,
        "height": 18,
      },
      "icon": Object {
        "style": Object {
          "marginEnd": 8,
        },
      },
      "root": Object {
        "style": Object {
          "margin": 8,
        },
      },
      "stack": Object {
        "style": Object {
          "paddingHorizontal": 14,
          "paddingVertical": 10,
        },
      },
      "tokens": Object {
        "borderRadius": 8,
        "borderWidth": 1,
      },
    },
    "Checkbox": Object {
      "checkbox": Object {
        "style": Object {
          "borderRadius": 100,
          "minHeight": 24,
          "minWidth": 24,
        },
      },
      "checkmarkIcon": Object {
        "height": 7,
        "style": Object {
          "marginLeft": 8,
          "marginRight": 7,
          "marginVertical": 8.5,
        },
        "width": 8.5,
      },
      "root": Object {
        "style": Object {
          "marginVertical": 2,
          "minHeight": 20,
        },
      },
    },
    "PrimaryButton": Object {
      "content": Object {
        "fontSize": 15,
        "height": 20,
      },
      "icon": Object {
        "style": Object {
          "marginEnd": 10,
        },
      },
      "root": Object {
        "style": Object {
          "margin": 8,
        },
      },
      "stack": Object {
        "style": Object {
          "paddingHorizontal": 20,
          "paddingVertical": 16,
        },
      },
      "tokens": Object {
        "borderRadius": 8,
        "borderWidth": 1,
      },
    },
    "RNFText": Object {
      "tokens": Object {
        "variant": "bodyStandard",
      },
    },
    "StealthButton": Object {
      "content": Object {
        "fontSize": 15,
        "height": 20,
      },
      "icon": Object {
        "style": Object {
          "display": "none",
        },
      },
      "root": Object {
        "style": Object {
          "margin": 8,
        },
      },
      "stack": Object {
        "style": Object {
          "paddingHorizontal": 12,
          "paddingVertical": 7,
        },
      },
      "tokens": Object {
        "borderRadius": 8,
        "borderWidth": 1,
      },
    },
  },
  "host": Object {
    "appearance": "light",
  },
  "shadows": Object {
    "shadow16": Object {
      "ambient": Object {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 16,
        "color": "#00000024",
        "x": 0,
        "y": 8,
      },
    },
    "shadow16brand": Object {
      "ambient": Object {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 16,
        "color": "#00000040",
        "x": 0,
        "y": 8,
      },
    },
    "shadow2": Object {
      "ambient": Object {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 2,
        "color": "#00000024",
        "x": 0,
        "y": 1,
      },
    },
    "shadow28": Object {
      "ambient": Object {
        "blur": 8,
        "color": "#00000033",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 28,
        "color": "#0000003d",
        "x": 0,
        "y": 14,
      },
    },
    "shadow28brand": Object {
      "ambient": Object {
        "blur": 8,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 28,
        "color": "#00000040",
        "x": 0,
        "y": 14,
      },
    },
    "shadow2brand": Object {
      "ambient": Object {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 2,
        "color": "#00000040",
        "x": 0,
        "y": 1,
      },
    },
    "shadow4": Object {
      "ambient": Object {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 4,
        "color": "#00000024",
        "x": 0,
        "y": 2,
      },
    },
    "shadow4brand": Object {
      "ambient": Object {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 4,
        "color": "#00000040",
        "x": 0,
        "y": 2,
      },
    },
    "shadow64": Object {
      "ambient": Object {
        "blur": 8,
        "color": "#00000033",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 64,
        "color": "#0000003d",
        "x": 0,
        "y": 32,
      },
    },
    "shadow64brand": Object {
      "ambient": Object {
        "blur": 8,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 64,
        "color": "#00000040",
        "x": 0,
        "y": 32,
      },
    },
    "shadow8": Object {
      "ambient": Object {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 8,
        "color": "#00000024",
        "x": 0,
        "y": 4,
      },
    },
    "shadow8brand": Object {
      "ambient": Object {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 8,
        "color": "#00000040",
        "x": 0,
        "y": 4,
      },
    },
  },
  "spacing": Object {
    "l1": "20px",
    "l2": "32px",
    "s1": "8px",
    "s2": "4px",
  },
  "typography": Object {
    "families": Object {
      "cursive": "System",
      "monospace": "System",
      "primary": "System",
      "sansSerif": "System",
      "secondary": "System",
      "serif": "System",
    },
    "sizes": Object {
      "body": 17,
      "caption": 12,
      "header": 17,
      "hero": 26,
      "heroLarge": 30,
      "secondary": 16,
      "subheader": 15,
    },
    "variants": Object {
      "body1": Object {
        "dynamicTypeRamp": "body",
        "face": "System",
        "letterSpacing": -0.43,
        "lineHeight": 22,
        "size": 17,
        "weight": "400",
      },
      "body1Strong": Object {
        "dynamicTypeRamp": "body",
        "face": "System",
        "letterSpacing": -0.43,
        "lineHeight": 22,
        "size": 17,
        "weight": "600",
      },
      "body2": Object {
        "dynamicTypeRamp": "subheadline",
        "face": "System",
        "letterSpacing": -0.23,
        "lineHeight": 20,
        "size": 15,
        "weight": "400",
      },
      "body2Strong": Object {
        "dynamicTypeRamp": "subheadline",
        "face": "System",
        "letterSpacing": -0.23,
        "lineHeight": 20,
        "size": 15,
        "weight": "600",
      },
      "bodySemibold": Object {
        "face": "primary",
        "size": "body",
        "weight": "600",
      },
      "bodyStandard": Object {
        "face": "primary",
        "size": "body",
        "weight": "400",
      },
      "caption1": Object {
        "dynamicTypeRamp": "footnote",
        "face": "System",
        "letterSpacing": -0.08,
        "lineHeight": 18,
        "size": 13,
        "weight": "400",
      },
      "caption1Strong": Object {
        "dynamicTypeRamp": "footnote",
        "face": "System",
        "letterSpacing": -0.08,
        "lineHeight": 18,
        "size": 13,
        "weight": "600",
      },
      "caption2": Object {
        "dynamicTypeRamp": "caption1",
        "face": "System",
        "letterSpacing": 0,
        "lineHeight": 16,
        "size": 12,
        "weight": "400",
      },
      "captionStandard": Object {
        "face": "primary",
        "size": "caption",
        "weight": "400",
      },
      "display": Object {
        "dynamicTypeRamp": "largeTitle",
        "face": "System",
        "letterSpacing": 0.26,
        "lineHeight": 70,
        "size": 60,
        "weight": "700",
      },
      "headerSemibold": Object {
        "face": "primary",
        "size": "header",
        "weight": "800",
      },
      "headerStandard": Object {
        "face": "primary",
        "size": "header",
        "weight": "600",
      },
      "heroLargeSemibold": Object {
        "face": "primary",
        "size": "heroLarge",
        "weight": "600",
      },
      "heroLargeStandard": Object {
        "face": "primary",
        "size": "heroLarge",
        "weight": "400",
      },
      "heroSemibold": Object {
        "face": "primary",
        "size": "hero",
        "weight": "600",
      },
      "heroStandard": Object {
        "face": "primary",
        "size": "hero",
        "weight": "400",
      },
      "largeTitle": Object {
        "dynamicTypeRamp": "largeTitle",
        "face": "System",
        "letterSpacing": 0.4,
        "lineHeight": 41,
        "size": 34,
        "weight": "700",
      },
      "secondarySemibold": Object {
        "face": "primary",
        "size": "secondary",
        "weight": "600",
      },
      "secondaryStandard": Object {
        "face": "primary",
        "size": "secondary",
        "weight": "400",
      },
      "subheaderSemibold": Object {
        "face": "primary",
        "size": "subheader",
        "weight": "600",
      },
      "subheaderStandard": Object {
        "face": "primary",
        "size": "subheader",
        "weight": "400",
      },
      "title1": Object {
        "dynamicTypeRamp": "title1",
        "face": "System",
        "letterSpacing": 0.38,
        "lineHeight": 34,
        "size": 28,
        "weight": "700",
      },
      "title2": Object {
        "dynamicTypeRamp": "title2",
        "face": "System",
        "letterSpacing": -0.26,
        "lineHeight": 28,
        "size": 22,
        "weight": "600",
      },
      "title3": Object {
        "dynamicTypeRamp": "title3",
        "face": "System",
        "letterSpacing": -0.45,
        "lineHeight": 25,
        "size": 20,
        "weight": "600",
      },
    },
    "weights": Object {
      "black": "900",
      "bold": "700",
      "heavy": "800",
      "light": "300",
      "medium": "500",
      "regular": "400",
      "semiBold": "600",
      "thin": "200",
      "ultralight": "100",
    },
  },
}
`;

exports[`createMacOSColorAliasTokens test mode: dark, isHighContrast: false 1`] = `
Object {
  "brandBackground": "#0086f0",
  "brandBackground2": "#092c47",
  "brandBackgroundDisabled": "#575757",
  "brandBackgroundHover": "#1890f1",
  "brandBackgroundPressed": "#1890f1",
  "brandBackgroundSelected": "#3aa0f3",
  "brandBackgroundStatic": "#0086f0",
  "brandForeground1": "#0086f0",
  "brandForeground1Disabled": "#c2c2c2",
  "brandForeground1Pressed": "#6cb8f6",
  "brandForeground2": "#092c47",
  "brandForegroundLink": "#043862",
  "brandForegroundLinkHover": "#092c47",
  "brandForegroundLinkPressed": "#0078d4",
  "brandForegroundLinkSelected": "#092c47",
  "brandStroke1": "#0086f0",
  "brandStroke2": "#004c87",
  "compoundBrandBackground1": "#0086f0",
  "compoundBrandBackground1Hover": "#1890f1",
  "compoundBrandBackground1Pressed": "#6cb8f6",
  "compoundBrandForeground1": "#043862",
  "compoundBrandForeground1Hover": "#092c47",
  "compoundBrandForeground1Pressed": "#0078d4",
  "compoundBrandStroke1": "#0086f0",
  "compoundBrandStroke1Hover": "#1890f1",
  "compoundBrandStroke1Pressed": "#6cb8f6",
  "neutralBackground1": "#000000",
  "neutralBackground1Hover": "#3d3d3d",
  "neutralBackground1Pressed": "#5c5c5c",
  "neutralBackground1Selected": "#383838",
  "neutralBackground2": "#575757",
  "neutralBackground2Hover": "#333333",
  "neutralBackground2Pressed": "#707070",
  "neutralBackground2Selected": "#2e2e2e",
  "neutralBackground3": "#575757",
  "neutralBackground3Hover": "#292929",
  "neutralBackground3Pressed": "#0a0a0a",
  "neutralBackground3Selected": "#242424",
  "neutralBackground4": "#1f1f1f",
  "neutralBackground4Hover": "#1f1f1f",
  "neutralBackground4Pressed": "#000000",
  "neutralBackground4Selected": "#1a1a1a",
  "neutralBackground5": "#5c5c5c",
  "neutralBackground5Hover": "#141414",
  "neutralBackground5Pressed": "#050505",
  "neutralBackground5Selected": "#0f0f0f",
  "neutralBackground6": "#333333",
  "neutralBackgroundDisabled": "#575757",
  "neutralBackgroundInverted": "#ffffff",
  "neutralForeground1": "#ffffff",
  "neutralForeground1Hover": "#ffffff",
  "neutralForeground1Pressed": "#ffffff",
  "neutralForeground1Selected": "#ffffff",
  "neutralForeground2": "#ffffff",
  "neutralForeground2BrandHover": "#092c47",
  "neutralForeground2BrandPressed": "#0078d4",
  "neutralForeground2BrandSelected": "#092c47",
  "neutralForeground2Hover": "#ffffff",
  "neutralForeground2Pressed": "#ffffff",
  "neutralForeground2Selected": "#ffffff",
  "neutralForeground3": "#adadad",
  "neutralForeground3BrandHover": "#092c47",
  "neutralForeground3BrandPressed": "#0078d4",
  "neutralForeground3BrandSelected": "#092c47",
  "neutralForeground3Hover": "#d6d6d6",
  "neutralForeground3Pressed": "#d6d6d6",
  "neutralForeground3Selected": "#d6d6d6",
  "neutralForeground4": "#858585",
  "neutralForegroundDisabled": "#b8b8b8",
  "neutralForegroundInverted": "#ffffff",
  "neutralForegroundInvertedLink": "#292929",
  "neutralForegroundInvertedLinkHover": "#292929",
  "neutralForegroundInvertedLinkPressed": "#292929",
  "neutralForegroundInvertedLinkSelected": "#292929",
  "neutralForegroundOnBrand": "#ffffff",
  "neutralForegroundOnBrandHover": "#ffffff",
  "neutralForegroundOnBrandPressed": "#ffffff",
  "neutralForegroundOnBrandSelected": "#ffffff",
  "neutralStencil1": "#333333",
  "neutralStencil2": "#575757",
  "neutralStroke1": "#3d3d3d",
  "neutralStroke1Hover": "#757575",
  "neutralStroke1Pressed": "#6b6b6b",
  "neutralStroke1Selected": "#707070",
  "neutralStroke2": "#575757",
  "neutralStroke3": "#666666",
  "neutralStrokeAccessible": "#adadad",
  "neutralStrokeAccessibleHover": "#bdbdbd",
  "neutralStrokeAccessiblePressed": "#b3b3b3",
  "neutralStrokeAccessibleSelected": "#0086f0",
  "neutralStrokeDisabled": "#525252",
  "redBackground1": "#230308",
  "redBackground2": "#420610",
  "redBackground3": "#750b1c",
  "redBorder1": "#750b1c",
  "redBorder2": "#962f3f",
  "redBorderActive": "#ac4f5e",
  "redForeground1": "#ac4f5e",
  "redForeground2": "#420610",
  "redForeground3": "#750b1c",
  "strokeFocus1": "#000000",
  "strokeFocus2": "#ffffff",
  "subtleBackground": "transparent",
  "subtleBackgroundHover": "#3d3d3d",
  "subtleBackgroundPressed": "#1f1f1f",
  "subtleBackgroundSelected": "#383838",
  "transparentBackground": "transparent",
  "transparentBackgroundHover": "transparent",
  "transparentBackgroundPressed": "transparent",
  "transparentBackgroundSelected": "transparent",
  "transparentStroke": "transparent",
  "transparentStrokeDisabled": "transparent",
  "transparentStrokeInteractive": "transparent",
}
`;

exports[`createMacOSColorAliasTokens test mode: dark, isHighContrast: true 1`] = `
Object {
  "brandBackground": "#0086f0",
  "brandBackground2": "#092c47",
  "brandBackgroundDisabled": "#575757",
  "brandBackgroundHover": "#1890f1",
  "brandBackgroundPressed": "#1890f1",
  "brandBackgroundSelected": "#3aa0f3",
  "brandBackgroundStatic": "#0086f0",
  "brandForeground1": "#0086f0",
  "brandForeground1Disabled": "#c2c2c2",
  "brandForeground1Pressed": "#6cb8f6",
  "brandForeground2": "#092c47",
  "brandForegroundLink": "#043862",
  "brandForegroundLinkHover": "#092c47",
  "brandForegroundLinkPressed": "#0078d4",
  "brandForegroundLinkSelected": "#092c47",
  "brandStroke1": "#0086f0",
  "brandStroke2": "#004c87",
  "compoundBrandBackground1": "#0086f0",
  "compoundBrandBackground1Hover": "#1890f1",
  "compoundBrandBackground1Pressed": "#6cb8f6",
  "compoundBrandForeground1": "#043862",
  "compoundBrandForeground1Hover": "#092c47",
  "compoundBrandForeground1Pressed": "#0078d4",
  "compoundBrandStroke1": "#0086f0",
  "compoundBrandStroke1Hover": "#1890f1",
  "compoundBrandStroke1Pressed": "#6cb8f6",
  "neutralBackground1": "#000000",
  "neutralBackground1Hover": "#3d3d3d",
  "neutralBackground1Pressed": "#5c5c5c",
  "neutralBackground1Selected": "#383838",
  "neutralBackground2": "#575757",
  "neutralBackground2Hover": "#333333",
  "neutralBackground2Pressed": "#707070",
  "neutralBackground2Selected": "#2e2e2e",
  "neutralBackground3": "#575757",
  "neutralBackground3Hover": "#292929",
  "neutralBackground3Pressed": "#0a0a0a",
  "neutralBackground3Selected": "#242424",
  "neutralBackground4": "#1f1f1f",
  "neutralBackground4Hover": "#1f1f1f",
  "neutralBackground4Pressed": "#000000",
  "neutralBackground4Selected": "#1a1a1a",
  "neutralBackground5": "#5c5c5c",
  "neutralBackground5Hover": "#141414",
  "neutralBackground5Pressed": "#050505",
  "neutralBackground5Selected": "#0f0f0f",
  "neutralBackground6": "#333333",
  "neutralBackgroundDisabled": "#575757",
  "neutralBackgroundInverted": "#ffffff",
  "neutralForeground1": "#ffffff",
  "neutralForeground1Hover": "#ffffff",
  "neutralForeground1Pressed": "#ffffff",
  "neutralForeground1Selected": "#ffffff",
  "neutralForeground2": "#ffffff",
  "neutralForeground2BrandHover": "#092c47",
  "neutralForeground2BrandPressed": "#0078d4",
  "neutralForeground2BrandSelected": "#092c47",
  "neutralForeground2Hover": "#ffffff",
  "neutralForeground2Pressed": "#ffffff",
  "neutralForeground2Selected": "#ffffff",
  "neutralForeground3": "#d6d6d6",
  "neutralForeground3BrandHover": "#092c47",
  "neutralForeground3BrandPressed": "#0078d4",
  "neutralForeground3BrandSelected": "#092c47",
  "neutralForeground3Hover": "#d6d6d6",
  "neutralForeground3Pressed": "#d6d6d6",
  "neutralForeground3Selected": "#d6d6d6",
  "neutralForeground4": "#d6d6d6",
  "neutralForegroundDisabled": "#b8b8b8",
  "neutralForegroundInverted": "#ffffff",
  "neutralForegroundInvertedLink": "#292929",
  "neutralForegroundInvertedLinkHover": "#292929",
  "neutralForegroundInvertedLinkPressed": "#292929",
  "neutralForegroundInvertedLinkSelected": "#292929",
  "neutralForegroundOnBrand": "#ffffff",
  "neutralForegroundOnBrandHover": "#ffffff",
  "neutralForegroundOnBrandPressed": "#ffffff",
  "neutralForegroundOnBrandSelected": "#ffffff",
  "neutralStencil1": "#333333",
  "neutralStencil2": "#575757",
  "neutralStroke1": "#adadad",
  "neutralStroke1Hover": "#757575",
  "neutralStroke1Pressed": "#6b6b6b",
  "neutralStroke1Selected": "#707070",
  "neutralStroke2": "#a8a8a8",
  "neutralStroke3": "#adadad",
  "neutralStrokeAccessible": "#d6d6d6",
  "neutralStrokeAccessibleHover": "#bdbdbd",
  "neutralStrokeAccessiblePressed": "#b3b3b3",
  "neutralStrokeAccessibleSelected": "#0086f0",
  "neutralStrokeDisabled": "#525252",
  "redBackground1": "#230308",
  "redBackground2": "#420610",
  "redBackground3": "#750b1c",
  "redBorder1": "#750b1c",
  "redBorder2": "#962f3f",
  "redBorderActive": "#ac4f5e",
  "redForeground1": "#ac4f5e",
  "redForeground2": "#420610",
  "redForeground3": "#750b1c",
  "strokeFocus1": "#000000",
  "strokeFocus2": "#ffffff",
  "subtleBackground": "transparent",
  "subtleBackgroundHover": "#3d3d3d",
  "subtleBackgroundPressed": "#1f1f1f",
  "subtleBackgroundSelected": "#383838",
  "transparentBackground": "transparent",
  "transparentBackgroundHover": "transparent",
  "transparentBackgroundPressed": "transparent",
  "transparentBackgroundSelected": "transparent",
  "transparentStroke": "#3aa0f3",
  "transparentStrokeDisabled": "#d6d6d6",
  "transparentStrokeInteractive": "#a8a8a8",
}
`;

exports[`createMacOSColorAliasTokens test mode: light, isHighContrast: false 1`] = `
Object {
  "brandBackground": "#0078d4",
  "brandBackground2": "#eff6fc",
  "brandBackgroundDisabled": "#d1d1d1",
  "brandBackgroundHover": "#106ebe",
  "brandBackgroundPressed": "#106ebe",
  "brandBackgroundSelected": "#005a9e",
  "brandBackgroundStatic": "#0078d4",
  "brandForeground1": "#0078d4",
  "brandForeground1Disabled": "#757575",
  "brandForeground1Pressed": "#004578",
  "brandForeground2": "#106ebe",
  "brandForegroundLink": "#0078d4",
  "brandForegroundLinkHover": "#106ebe",
  "brandForegroundLinkPressed": "#004578",
  "brandForegroundLinkSelected": "#005a9e",
  "brandStroke1": "#0078d4",
  "brandStroke2": "#c7e0f4",
  "compoundBrandBackground1": "#0078d4",
  "compoundBrandBackground1Hover": "#106ebe",
  "compoundBrandBackground1Pressed": "#004578",
  "compoundBrandForeground1": "#0078d4",
  "compoundBrandForeground1Hover": "#106ebe",
  "compoundBrandForeground1Pressed": "#004578",
  "compoundBrandStroke1": "#0078d4",
  "compoundBrandStroke1Hover": "#106ebe",
  "compoundBrandStroke1Pressed": "#004578",
  "neutralBackground1": "#ffffff",
  "neutralBackground1Hover": "#f5f5f5",
  "neutralBackground1Pressed": "#ebebeb",
  "neutralBackground1Selected": "#ebebeb",
  "neutralBackground2": "#ffffff",
  "neutralBackground2Hover": "#f0f0f0",
  "neutralBackground2Pressed": "#ebebeb",
  "neutralBackground2Selected": "#e6e6e6",
  "neutralBackground3": "#f5f5f5",
  "neutralBackground3Hover": "#ebebeb",
  "neutralBackground3Pressed": "#d6d6d6",
  "neutralBackground3Selected": "#e0e0e0",
  "neutralBackground4": "#f0f0f0",
  "neutralBackground4Hover": "#fafafa",
  "neutralBackground4Pressed": "#f5f5f5",
  "neutralBackground4Selected": "#ffffff",
  "neutralBackground5": "#ebebeb",
  "neutralBackground5Hover": "#f5f5f5",
  "neutralBackground5Pressed": "#f0f0f0",
  "neutralBackground5Selected": "#fafafa",
  "neutralBackground6": "#e6e6e6",
  "neutralBackgroundDisabled": "#f0f0f0",
  "neutralBackgroundInverted": "#616161",
  "neutralForeground1": "#242424",
  "neutralForeground1Hover": "#242424",
  "neutralForeground1Pressed": "#242424",
  "neutralForeground1Selected": "#242424",
  "neutralForeground2": "#000000",
  "neutralForeground2BrandHover": "#106ebe",
  "neutralForeground2BrandPressed": "#004578",
  "neutralForeground2BrandSelected": "#005a9e",
  "neutralForeground2Hover": "#242424",
  "neutralForeground2Pressed": "#242424",
  "neutralForeground2Selected": "#242424",
  "neutralForeground3": "#616161",
  "neutralForeground3BrandHover": "#106ebe",
  "neutralForeground3BrandPressed": "#004578",
  "neutralForeground3BrandSelected": "#005a9e",
  "neutralForeground3Hover": "#424242",
  "neutralForeground3Pressed": "#424242",
  "neutralForeground3Selected": "#424242",
  "neutralForeground4": "#808080",
  "neutralForegroundDisabled": "#757575",
  "neutralForegroundInverted": "#ffffff",
  "neutralForegroundInvertedLink": "#ffffff",
  "neutralForegroundInvertedLinkHover": "#ffffff",
  "neutralForegroundInvertedLinkPressed": "#ffffff",
  "neutralForegroundInvertedLinkSelected": "#ffffff",
  "neutralForegroundOnBrand": "#ffffff",
  "neutralForegroundOnBrandHover": "#ffffff",
  "neutralForegroundOnBrandPressed": "#ffffff",
  "neutralForegroundOnBrandSelected": "#ffffff",
  "neutralStencil1": "#e6e6e6",
  "neutralStencil2": "#fafafa",
  "neutralStroke1": "#f0f0f0",
  "neutralStroke1Hover": "#c7c7c7",
  "neutralStroke1Pressed": "#b3b3b3",
  "neutralStroke1Selected": "#bdbdbd",
  "neutralStroke2": "#d6d6d6",
  "neutralStroke3": "#f0f0f0",
  "neutralStrokeAccessible": "#616161",
  "neutralStrokeAccessibleHover": "#575757",
  "neutralStrokeAccessiblePressed": "#4d4d4d",
  "neutralStrokeAccessibleSelected": "#0078d4",
  "neutralStrokeDisabled": "#e0e0e0",
  "redBackground1": "#f9f0f2",
  "redBackground2": "#d69ca5",
  "redBackground3": "#750b1c",
  "redBorder1": "#d69ca5",
  "redBorder2": "#750b1c",
  "redBorderActive": "#750b1c",
  "redForeground1": "#690a19",
  "redForeground2": "#d69ca5",
  "redForeground3": "#750b1c",
  "strokeFocus1": "#ffffff",
  "strokeFocus2": "#000000",
  "subtleBackground": "transparent",
  "subtleBackgroundHover": "#f5f5f5",
  "subtleBackgroundPressed": "#e0e0e0",
  "subtleBackgroundSelected": "#ebebeb",
  "transparentBackground": "transparent",
  "transparentBackgroundHover": "transparent",
  "transparentBackgroundPressed": "transparent",
  "transparentBackgroundSelected": "transparent",
  "transparentStroke": "transparent",
  "transparentStrokeDisabled": "transparent",
  "transparentStrokeInteractive": "transparent",
}
`;

exports[`createMacOSColorAliasTokens test mode: light, isHighContrast: true 1`] = `
Object {
  "brandBackground": "#0078d4",
  "brandBackground2": "#eff6fc",
  "brandBackgroundDisabled": "#d1d1d1",
  "brandBackgroundHover": "#106ebe",
  "brandBackgroundPressed": "#106ebe",
  "brandBackgroundSelected": "#005a9e",
  "brandBackgroundStatic": "#0078d4",
  "brandForeground1": "#0078d4",
  "brandForeground1Disabled": "#757575",
  "brandForeground1Pressed": "#004578",
  "brandForeground2": "#106ebe",
  "brandForegroundLink": "#0078d4",
  "brandForegroundLinkHover": "#106ebe",
  "brandForegroundLinkPressed": "#004578",
  "brandForegroundLinkSelected": "#005a9e",
  "brandStroke1": "#0078d4",
  "brandStroke2": "#c7e0f4",
  "compoundBrandBackground1": "#0078d4",
  "compoundBrandBackground1Hover": "#106ebe",
  "compoundBrandBackground1Pressed": "#004578",
  "compoundBrandForeground1": "#0078d4",
  "compoundBrandForeground1Hover": "#106ebe",
  "compoundBrandForeground1Pressed": "#004578",
  "compoundBrandStroke1": "#0078d4",
  "compoundBrandStroke1Hover": "#106ebe",
  "compoundBrandStroke1Pressed": "#004578",
  "neutralBackground1": "#ffffff",
  "neutralBackground1Hover": "#f5f5f5",
  "neutralBackground1Pressed": "#ebebeb",
  "neutralBackground1Selected": "#ebebeb",
  "neutralBackground2": "#ffffff",
  "neutralBackground2Hover": "#f0f0f0",
  "neutralBackground2Pressed": "#ebebeb",
  "neutralBackground2Selected": "#e6e6e6",
  "neutralBackground3": "#f5f5f5",
  "neutralBackground3Hover": "#ebebeb",
  "neutralBackground3Pressed": "#d6d6d6",
  "neutralBackground3Selected": "#e0e0e0",
  "neutralBackground4": "#f0f0f0",
  "neutralBackground4Hover": "#fafafa",
  "neutralBackground4Pressed": "#f5f5f5",
  "neutralBackground4Selected": "#ffffff",
  "neutralBackground5": "#ebebeb",
  "neutralBackground5Hover": "#f5f5f5",
  "neutralBackground5Pressed": "#f0f0f0",
  "neutralBackground5Selected": "#fafafa",
  "neutralBackground6": "#e6e6e6",
  "neutralBackgroundDisabled": "#f0f0f0",
  "neutralBackgroundInverted": "#616161",
  "neutralForeground1": "#000000",
  "neutralForeground1Hover": "#000000",
  "neutralForeground1Pressed": "#000000",
  "neutralForeground1Selected": "#000000",
  "neutralForeground2": "#000000",
  "neutralForeground2BrandHover": "#106ebe",
  "neutralForeground2BrandPressed": "#004578",
  "neutralForeground2BrandSelected": "#005a9e",
  "neutralForeground2Hover": "#242424",
  "neutralForeground2Pressed": "#242424",
  "neutralForeground2Selected": "#242424",
  "neutralForeground3": "#000000",
  "neutralForeground3BrandHover": "#106ebe",
  "neutralForeground3BrandPressed": "#004578",
  "neutralForeground3BrandSelected": "#005a9e",
  "neutralForeground3Hover": "#424242",
  "neutralForeground3Pressed": "#424242",
  "neutralForeground3Selected": "#424242",
  "neutralForeground4": "#424242",
  "neutralForegroundDisabled": "#757575",
  "neutralForegroundInverted": "#ffffff",
  "neutralForegroundInvertedLink": "#ffffff",
  "neutralForegroundInvertedLinkHover": "#ffffff",
  "neutralForegroundInvertedLinkPressed": "#ffffff",
  "neutralForegroundInvertedLinkSelected": "#ffffff",
  "neutralForegroundOnBrand": "#ffffff",
  "neutralForegroundOnBrandHover": "#ffffff",
  "neutralForegroundOnBrandPressed": "#ffffff",
  "neutralForegroundOnBrandSelected": "#ffffff",
  "neutralStencil1": "#e6e6e6",
  "neutralStencil2": "#fafafa",
  "neutralStroke1": "#616161",
  "neutralStroke1Hover": "#c7c7c7",
  "neutralStroke1Pressed": "#b3b3b3",
  "neutralStroke1Selected": "#bdbdbd",
  "neutralStroke2": "#000000",
  "neutralStroke3": "#616161",
  "neutralStrokeAccessible": "#242424",
  "neutralStrokeAccessibleHover": "#575757",
  "neutralStrokeAccessiblePressed": "#4d4d4d",
  "neutralStrokeAccessibleSelected": "#0078d4",
  "neutralStrokeDisabled": "#e0e0e0",
  "redBackground1": "#f9f0f2",
  "redBackground2": "#d69ca5",
  "redBackground3": "#750b1c",
  "redBorder1": "#d69ca5",
  "redBorder2": "#750b1c",
  "redBorderActive": "#750b1c",
  "redForeground1": "#690a19",
  "redForeground2": "#d69ca5",
  "redForeground3": "#750b1c",
  "strokeFocus1": "#ffffff",
  "strokeFocus2": "#000000",
  "subtleBackground": "transparent",
  "subtleBackgroundHover": "#f5f5f5",
  "subtleBackgroundPressed": "#e0e0e0",
  "subtleBackgroundSelected": "#ebebeb",
  "transparentBackground": "transparent",
  "transparentBackgroundHover": "transparent",
  "transparentBackgroundPressed": "transparent",
  "transparentBackgroundSelected": "transparent",
  "transparentStroke": "#000000",
  "transparentStrokeDisabled": "#bdbdbd",
  "transparentStrokeInteractive": "#666666",
}
`;

exports[`createMacOSShadowAliasTokens test mode: dark, isHighContrast: false 1`] = `
Object {
  "shadow16": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000047",
      "x": 0,
      "y": 8,
    },
  },
  "shadow16brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000040",
      "x": 0,
      "y": 8,
    },
  },
  "shadow2": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000047",
      "x": 0,
      "y": 1,
    },
  },
  "shadow28": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#0000007a",
      "x": 0,
      "y": 14,
    },
  },
  "shadow28brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#00000040",
      "x": 0,
      "y": 14,
    },
  },
  "shadow2brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000040",
      "x": 0,
      "y": 1,
    },
  },
  "shadow4": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000047",
      "x": 0,
      "y": 2,
    },
  },
  "shadow4brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000040",
      "x": 0,
      "y": 2,
    },
  },
  "shadow64": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#0000007a",
      "x": 0,
      "y": 32,
    },
  },
  "shadow64brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#00000040",
      "x": 0,
      "y": 32,
    },
  },
  "shadow8": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000047",
      "x": 0,
      "y": 4,
    },
  },
  "shadow8brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000040",
      "x": 0,
      "y": 4,
    },
  },
}
`;

exports[`createMacOSShadowAliasTokens test mode: dark, isHighContrast: true 1`] = `
Object {
  "shadow16": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000047",
      "x": 0,
      "y": 8,
    },
  },
  "shadow16brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000040",
      "x": 0,
      "y": 8,
    },
  },
  "shadow2": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000047",
      "x": 0,
      "y": 1,
    },
  },
  "shadow28": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#0000007a",
      "x": 0,
      "y": 14,
    },
  },
  "shadow28brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#00000040",
      "x": 0,
      "y": 14,
    },
  },
  "shadow2brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000040",
      "x": 0,
      "y": 1,
    },
  },
  "shadow4": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000047",
      "x": 0,
      "y": 2,
    },
  },
  "shadow4brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000040",
      "x": 0,
      "y": 2,
    },
  },
  "shadow64": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#0000007a",
      "x": 0,
      "y": 32,
    },
  },
  "shadow64brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#00000040",
      "x": 0,
      "y": 32,
    },
  },
  "shadow8": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000047",
      "x": 0,
      "y": 4,
    },
  },
  "shadow8brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000040",
      "x": 0,
      "y": 4,
    },
  },
}
`;

exports[`createMacOSShadowAliasTokens test mode: light, isHighContrast: false 1`] = `
Object {
  "shadow16": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000001f",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000024",
      "x": 0,
      "y": 8,
    },
  },
  "shadow16brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000040",
      "x": 0,
      "y": 8,
    },
  },
  "shadow2": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000001f",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000024",
      "x": 0,
      "y": 1,
    },
  },
  "shadow28": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000033",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#0000003d",
      "x": 0,
      "y": 14,
    },
  },
  "shadow28brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#00000040",
      "x": 0,
      "y": 14,
    },
  },
  "shadow2brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000040",
      "x": 0,
      "y": 1,
    },
  },
  "shadow4": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000001f",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000024",
      "x": 0,
      "y": 2,
    },
  },
  "shadow4brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000040",
      "x": 0,
      "y": 2,
    },
  },
  "shadow64": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000033",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#0000003d",
      "x": 0,
      "y": 32,
    },
  },
  "shadow64brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#00000040",
      "x": 0,
      "y": 32,
    },
  },
  "shadow8": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000001f",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000024",
      "x": 0,
      "y": 4,
    },
  },
  "shadow8brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000040",
      "x": 0,
      "y": 4,
    },
  },
}
`;

exports[`createMacOSShadowAliasTokens test mode: light, isHighContrast: true 1`] = `
Object {
  "shadow16": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000047",
      "x": 0,
      "y": 8,
    },
  },
  "shadow16brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000040",
      "x": 0,
      "y": 8,
    },
  },
  "shadow2": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000047",
      "x": 0,
      "y": 1,
    },
  },
  "shadow28": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#0000007a",
      "x": 0,
      "y": 14,
    },
  },
  "shadow28brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#00000040",
      "x": 0,
      "y": 14,
    },
  },
  "shadow2brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000040",
      "x": 0,
      "y": 1,
    },
  },
  "shadow4": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000047",
      "x": 0,
      "y": 2,
    },
  },
  "shadow4brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000040",
      "x": 0,
      "y": 2,
    },
  },
  "shadow64": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#0000007a",
      "x": 0,
      "y": 32,
    },
  },
  "shadow64brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#00000040",
      "x": 0,
      "y": 32,
    },
  },
  "shadow8": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000047",
      "x": 0,
      "y": 4,
    },
  },
  "shadow8brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000040",
      "x": 0,
      "y": 4,
    },
  },
}
`;
